--- a/src/style.css
+++ b/src/style.css
@@ -2,24 +2,76 @@
     --white: white;
     --red: rgb(238, 103, 103);
     --black: black;
+    --light-red: rgb(223, 160, 160);
 }
 
 body {
-    height: 100svh;
-    background: var(--red);
+    background: var(--white);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin: 0px;
 }
 
 #content {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    min-height: 100svh;
+}
+
+header {
+    background-color: var(--light-red);
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+button {
+    border: none;
+    color: var(--black);
+    width: 150px;
+    height: 50px;
+    background: var(--white);
+    margin-left: 20px;
+    margin-right: 20px;
+    font-size: 20px;
 }
 
 .name {
     color: var(--black);
-    font-size: 50px;
-    grid-area: 1/1/2/3;
+    font-size: 20px;
 }
 
-.middle-top {
+.middle {
     display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    flex-grow: 1;
+    padding: 10px;
+}
+
+.middle img {
+    width: 300px;
+    height: auto;
+    flex-grow: 1;
+}
+
+.middle .right-side {
+    font-size: 20px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: var(--light-red);
+    font-size: 10px;
+    width: 100%;
 }
