--- a/src/style.css
+++ b/src/style.css
@@ -55,7 +55,7 @@ button {
     flex-grow: 1;
     padding: 10px;
 }
-
+/*home*/
 .middle img {
     width: 300px;
     height: auto;
@@ -64,6 +64,17 @@ button {
 
 .middle .right-side {
     font-size: 20px;
+}
+
+/*menu*/
+
+#menu {
+    list-style: none;
+    font-size: 30px;
+}
+
+#menu li {
+    padding-bottom: 20px;
 }
 
 footer {
