--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,17 @@ button {
     padding-bottom: 20px;
 }
 
+/*about*/
+
+#about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    font-size: 30px;
+}
+
 footer {
     display: flex;
     flex-direction: column;
